--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "csv-writer": "^1.6.0",
     "exceljs": "^4.4.0",
-    "express-rate-limit": "^8.2.1",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
-    "joi": "^18.0.2",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
