--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "isomorphic-fetch": "^3.0.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
